objects/Error_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Type__c</fullName>
        <description>Message Type for aMind error mapping</description>
        <inlineHelpText>Message Type for aMind error mapping</inlineHelpText>
        <label>Message Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Informational</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pattern_Type__c</fullName>
        <label>Pattern Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contains</fullName>
                    <default>true</default>
                    <label>Contains</label>
                </value>
                <value>
                    <fullName>Matches</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pattern__c</fullName>
        <label>Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>aMind</fullName>
                </value>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>API Gateway</fullName>
                </value>
                <value>
                    <fullName>Siebel/MDM</fullName>
                </value>
                <value>
                    <fullName>Search Identity</fullName>
                </value>
                <value>
                    <fullName>Company Search (OII)</fullName>
                </value>
                <value>
                    <fullName>License Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>System__c</columns>
        <columns>Pattern__c</columns>
        <columns>Pattern_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>